  3.4.2
  	#463 - PHP Error for comments on protected images in newsstream
  	#467 - Birthday links do not work on home page.

  3.4.1
    #453 - Family Tree Picture Error
    #455 - Couple without children cause errors.
    #456 - Family Tree Add relationship box appears only at top of screen

  3.4.0
    #379 - Replace Java-Uploader
    #404 - Save photos to Amazon S3
    #406 - Sort Siblings, Children by DOB
    #413 - Unable to login after upgrading to 3.3
    #417 - Users should not show up as 'new' until they are activated
    #421 - Birthday shouldn't require year
    #423 - Multiple status update reply
    #426 - Include Middle name on Family Tree
    #436 - Show full details in What's New area
    #438 - Error Deleting Photos
    #446 - Calendar Birthdays

  3.3.1
    #401 - Cannot add new family member from family detail view
    #400 - Cannot add profile picture from Family Tree
    #411 - Adress book entries disappear after upgrade
    #410 - Undefined variable - Family Tree details

  3.3
    #232 - Broken Family Tree when removing relationships
    #293 - Form Validation Class
    #327 - Better password security
    #354 - New Upload / Photo Gallery classes
    #355 - Call to undefined function getsessiontoken() in video.php
    #357 - Photo Gallery: Photos not showing in Tagged Photos View
    #359 - Cannot merge two members in Administration
    #360 - Awards are broken
    #361 - Instagram Scheduled Job Failure
    #368 - Family Tree: Adding child 
    #371 - Family Tree - allow complex relationships 
    #375 - Adress not displayed
    #385 - Cannot login with Facebook 
    #392 - Issues merging two members
    #398 - Birthday url is wrong in day view

  3.2.3
    #358 - Youtube uploader - blank page, step 2
    #365 - Cannot view birthday event
    #373 - Cannot change timezone
    #374 - Upload Profilepicture without Java-Uploader
    #382 - Create new address does not create user_settings entry