@@ -1,6 +1,7 @@
   3.4.2
-  	#463 - PHP Error for comments on protected images in newsstream
-  	#467 - Birthday links do not work on home page.
+    #457 - Photos not deleted from server in Admin
+    #463 - PHP Error for comments on protected images in newsstream
+    #467 - Birthday links do not work on home page.
 
   3.4.1
     #453 - Family Tree Picture Error
